--- a/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.html
@@ -1,7 +1,8 @@
+<div class="breadcrumb">
+  <div class="title">Edit Item</div>
+</div>
+
 <div class="container">
-  <header>
-    <h3>Update Item</h3>
-  </header>
   <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
     <div class="input-field">
       <label for="name">Item Name<span class="imp">*</span></label>
