--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
@@ -1,7 +1,8 @@
+<div class="breadcrumb">
+  <div class="title">Create User</div>
+</div>
+
 <div class="container">
-  <header>
-    <h3>Create User</h3>
-  </header>
   <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
     <div class="input-field">
       <label for="firstName">First Name<span class="imp">*</span></label>
