--- a/src/components/snackbar/snackbar.component.scss
+++ b/src/components/snackbar/snackbar.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  justify-content: space-between;
 }
 
 .flex {
