--- a/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.html
+++ b/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.html
@@ -1,7 +1,8 @@
+<div class="breadcrumb">
+  <div class="title">Create GST Rate</div>
+</div>
+
 <div class="container">
-  <header>
-    <h3>Create GST</h3>
-  </header>
   <form [formGroup]="form" ngNativeValidate>
     <div class="input-field">
       <label for="rate">GST Rate(in %)<span class="imp">*</span></label>
@@ -11,6 +12,7 @@
       <label for="rate">GST Applicable From<span class="imp">*</span></label>
       <input type="date" class="input-txt" formControlName="applicableDt" required>
     </div>
+    <div class="input-field"></div>
     <div class="action-btns">
       <button type="submit" (click)="submit()">Submit</button>
       <button type="button" (click)="navigateToListGstPage()">Cancel</button>
