--- a/src/pages/master/aos-user/gst-rate-master/edit-gst-rate-master/edit-gst-rate-master.component.scss
+++ b/src/pages/master/aos-user/gst-rate-master/edit-gst-rate-master/edit-gst-rate-master.component.scss
@@ -1,12 +1,28 @@
 @use "../../../../../constants/colors.scss" as color;
 
-.container {
-  width: 50%;
+.breadcrumb {
   background-color: #fff;
-  padding: 10px 50px 25px;
+  margin-bottom: 15px;
+  padding: 10px 25px;
+  font-family: ROBOTO-MEDIUM;
+  color: #76838f;
+
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+
+  .title {
+    font-size: 1.1rem;
+    color: #0057a1;
+  }
+}
+
+.container {
+  width: auto;
+  background-color: #fff;
+  padding: 10px 25px 25px;
   display: flex;
   flex-wrap: wrap;
-  margin: 25px auto;
 
   form {
     width: 100%;
@@ -16,8 +32,3 @@
   }
 }
 
-h3 {
-  font-family: ROBOTO-MEDIUM;
-  font-weight: 400;
-  color: #76838f;
-}
