--- a/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.scss
+++ b/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.scss
@@ -1,9 +1,26 @@
 @use "../../../../../constants/colors.scss" as color;
 
+.breadcrumb {
+  background-color: #fff;
+  margin-bottom: 15px;
+  padding: 10px 25px;
+  font-family: ROBOTO-MEDIUM;
+  color: #76838f;
+
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+
+  .title {
+    font-size: 1.1rem;
+    color: #0057a1;
+  }
+}
+
 .container {
   width: auto;
   background-color: #fff;
-  padding: 10px 50px 25px;
+  padding: 10px 25px 25px;
   display: flex;
   flex-wrap: wrap;
 
@@ -14,6 +31,7 @@
     gap: 15px 30px;
   }
 }
+
 
 .input-field {
   select {
