--- a/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.scss
+++ b/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.scss
@@ -1,9 +1,26 @@
 @use "../../../../../constants/colors.scss" as color;
 
+.breadcrumb {
+  background-color: #fff;
+  margin-bottom: 15px;
+  padding: 10px 25px;
+  font-family: ROBOTO-MEDIUM;
+  color: #76838f;
+
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+
+  .title {
+    font-size: 1.1rem;
+    color: #0057a1;
+  }
+}
+
 .container {
   width: auto;
   background-color: #fff;
-  padding: 10px 50px 25px;
+  padding: 10px 25px 25px;
   display: flex;
   flex-wrap: wrap;
 
@@ -22,7 +39,6 @@ h3 {
 }
 
 .input-field {
-
   select {
     height: calc(2.0625rem + 2px);
     padding: 0.375rem 0.75rem;
@@ -42,5 +58,4 @@ h3 {
     background-position: right 10px center;
     background-size: 12px;
   }
-
 }
