--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -249,7 +249,7 @@
                     <td>{{ $index + 1 + offset() * limit() }}.</td>
                     <td>{{ item.customerId }}</td>
                     <td>{{ item.customerName }}</td>
-                    <td>{{ item.orderNo }}</td>
+                    <td>{{ 'ORD' + item.orderNo }}</td>
                     <td>{{ item.orderDate }}</td>
                     <td>{{ item.empCode }}</td>
                     <td>{{ item.empName }}</td>
