--- a/src/pages/auth/login/login.component.html
+++ b/src/pages/auth/login/login.component.html
@@ -4,21 +4,21 @@
         <img class="title" src="/images/app-title.png">
     </div>
     <div class="login-form">
-        <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
+        <form [formGroup]="form" (ngSubmit)="submit()" autocomplete="on">
             <div class="input-field">
-                <label for="code">Email : </label>
-                <input type="text" formControlName="code" required>
+                <label for="email">Email: </label>
+                <input type="email" formControlName="email" name="email" id="email" autocomplete="email" required>
             </div>
             <br>
             <div class="input-field">
-                <label for="password">Password :</label>
-                <input type="password" formControlName="password" required>
+                <label for="password">Password:</label>
+                <input type="password" formControlName="password" name="password" id="password" autocomplete="current-password" required>
             </div>
             <br>
             <div class="action-btns">
                 <button class="submit" type="submit">Login</button>
                 <button type="button" (click)="form.reset()">Clear</button>
             </div>
-        </form>
+        </form>        
     </div>
 </div>
