--- a/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
@@ -59,10 +59,6 @@
       </select>
     </div>
     <div class="input-field">
-      <label for="minOrderQty">Minimum Order Quantity<span class="imp">*</span></label>
-      <input type="number" formControlName="minOrderQty" required>
-    </div>
-    <div class="input-field">
       <label for="brand">Item Brand<span class="imp">*</span></label>
       <select formControlName="brand" required>
         @for (brand of brands; track brand) {
@@ -82,6 +78,7 @@
         }
       </select>
     </div>
+    <div class="input-field"></div>
     <div class="action-btns">
       <button mat-flat-button type="submit">Submit</button>
       <button mat-button type="button" style="padding: 0 20px;" (click)="navigateToListItemPage()">
