--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,11 @@
   src: url("assets/fonts/roboto-slab/RobotoSlab-Medium.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: POPPIN-BOLD;
+  src: url("assets/fonts/roboto-slab/RobotoSlab-Regular.ttf") format("truetype");
+}
+
 html,
 body {
   height: 100%;
