--- a/src/components/snackbar/snackbar.component.scss
+++ b/src/components/snackbar/snackbar.component.scss
@@ -12,13 +12,13 @@
 }
 
 .title {
-  font-size: 1.5rem;
-  font-family: POPPIN-MEDIUM;
+  font-size: 1.2rem;
+  font-family: POPPIN-BOLD;
   text-transform: capitalize;
-  margin-bottom: -10px;
+  margin-bottom: -20px;
 }
 
 .msg {
   font-size: 1.1rem;
-  font-family: ROBOTO-MEDIUM;
+  font-family: ROBOTO-LIGHT;
 }
