--- a/src/pages/dispatch-report/dispatch-report.component.scss
+++ b/src/pages/dispatch-report/dispatch-report.component.scss
@@ -22,3 +22,19 @@
   background-color: #fff;
   padding: 10px 25px 25px;
 }
+
+
+// button{
+//   padding: 5px 10px;
+//   border: none;
+//   background-color: #3782fb;
+//   border-radius: 5px;
+//   color: #fff;
+//   font-weight: 500;
+// }
+
+.footer{
+  font-family: ROBOTO-LIGHT;
+  font-size: 1.5rem;
+  margin-top: 15px;
+}
