--- a/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
+++ b/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
@@ -97,6 +97,6 @@
     <br>
     <div class="actn-btns">
         <button type="submit" (click)="submit()">Submit</button>&nbsp;&nbsp;
-        <button type="button">Cancel</button>
+        <button type="button" (click)="cancel()">Cancel</button>
     </div>
 </div>
