--- a/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
+++ b/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
@@ -53,7 +53,7 @@
         </table>
         <div class="btns">
             <!-- <button class="edit">Edit</button> -->
-            <button class="print">Print</button>
+            <button class="print" (click)="print()">Print</button>
             <button class="icon" mat-icon-button><mat-icon>print</mat-icon></button>
             <button class="export">Export</button>
         </div>
