--- a/src/pages/dispatch/dispatch-details/poster/poster.component.html
+++ b/src/pages/dispatch/dispatch-details/poster/poster.component.html
@@ -62,17 +62,18 @@
 
 <div class="fluid-container" id="printSection">
     <div class="container-wrapper">
+        @for (data of [1,2]; track $index) {
         <div class="container">
             <h3>DELIVERY NOTE</h3>
             <table>
                 <tr>
                     <td>
                         PO No. <br>
-                        1000172155
+                        -
                     </td>
                     <td>
-                        PR No. <br>
-                        1001369923
+                        ORD No. <br>
+                        {{ 'ORD'+orderId}}
                     </td>
                     <td>
                         Docket/AWB No. <br>
@@ -80,12 +81,12 @@
                     </td>
                     <td colspan="2">
                         Challan No. <br>
-                        I/22795
+                        {{ clientDetail.challanNo }}
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        PO Date
+                        ORD Date
                     </td>
                     <td>
                         Dispatched Through
@@ -116,15 +117,16 @@
                         <span style="font-size: 1.2rem;">Apple Office Stationers Private Limited</span> <br>
                         WE BELIVE IN SUPPLIES <br>
                         C - 18, GR FLR, GHATKOPAR IND EST,, NR AMRUT NAGAR, GHATKOPAR(W),MUMBAI - 86. <br>
-                        {{'Tel. No.:022 - 4120 0847 - 80800 21333, Mob. No.:80800 21333, Email-Id:info@applestationers.com'}}
+                        Tel. No.:022 - 4120 0847 - 80800 21333, Mob. No.:80800
+                        21333,Email-Id:info{{'@'}}applestationers.com
                         <br>
-                        GSTIN : 27AAMCA5565B1ZO, State : Maharashtra, Code : 27 <br>
+                        GSTIN : 27AAMCA5565B1ZO <br>
                     </td>
                 </tr>
                 <tr>
                     <td colspan="5">
                         <div class="flex">
-                            <div>M/s. : ICICI BANK LTD. - MAHARASHTRA</div>
+                            <div>{{ 'M/s. : ' +clientDetail.clientName }}</div>
                             <div>No. of Box : 1</div>
                         </div>
                     </td>
@@ -138,115 +140,10 @@
                 </tr>
                 @for (item of items; track $index) {
                 <tr>
-                    <td><span style="width: 15px;">{{ $index + 1 }}</span></td>
-                    <td>{{ item.product }}</td>
+                    <td><span style="width: 15px;">{{ $index + 1 }}.</span></td>
+                    <td>{{ item.itemName }}</td>
                     <td>{{ item.hsn }}</td>
-                    <td>{{ item.gstRate + ' %'}}</td>
-                    <td style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">{{ item.qty + ' Nos' }}
-                    </td>
-                </tr>
-                }
-                <tr>
-                    <td></td>
-                    <td>Total</td>
-                    <td></td>
-                    <td></td>
-                    <td style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">{{ total() + ' Nos'}}</td>
-                </tr>
-                <tr>
-                    <td colspan="5" style="text-align: left;">
-                        PLACE OF DELIVERY ADDRESS <br>
-                        Contact Person : Manisha Poojary <br>
-                        Contact Nos. : 8879167378 <br>
-                        ICICI BANK LTD. - MAHARASHTRA <br>
-                        2779-KALAMBOLI,SECTOR 9E, KALAMBOLI, NAVI MUMBA,,SHOP NO 6 <br>
-                        & 7, PARTH SOLITIRE,KALAMBOLI-410218 <br>
-                        {{'Email : manisha.poojary@icicibank.com Cost Center : 2779'}} <br>
-                        GST No. : 27AAACI1195H1ZM State : Maharashtra, Code : 27 <br>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="container">
-            <h3>DELIVERY NOTE</h3>
-            <table>
-                <tr>
-                    <td>
-                        PO No. <br>
-                        1000172155
-                    </td>
-                    <td>
-                        PR No. <br>
-                        1001369923
-                    </td>
-                    <td>
-                        Docket/AWB No. <br>
-                        GSN24090300360067
-                    </td>
-                    <td colspan="2">
-                        Challan No. <br>
-                        I/22795
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        PO Date
-                    </td>
-                    <td>
-                        Dispatched Through
-                    </td>
-                    <td>
-                        Docket/AWB Date
-                    </td>
-                    <td colspan="2">
-                        Challan Date
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        30-Jan-25
-                    </td>
-                    <td>
-                        GRANDSPEED COURIER AWB NO / DOCKET NO
-                    </td>
-                    <td>
-                        3-Feb-25
-                    </td>
-                    <td colspan="2">
-                        1-Feb-25
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="5">
-                        <span style="font-size: 1.2rem;">Apple Office Stationers Private Limited</span> <br>
-                        WE BELIVE IN SUPPLIES <br>
-                        C - 18, GR FLR, GHATKOPAR IND EST,, NR AMRUT NAGAR, GHATKOPAR(W),MUMBAI - 86. <br>
-                        {{'Tel. No.:022 - 4120 0847 - 80800 21333, Mob. No.:80800 21333, Email-Id:info@applestationers.com'}}
-                        <br>
-                        GSTIN : 27AAMCA5565B1ZO, State : Maharashtra, Code : 27 <br>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="5">
-                        <div class="flex">
-                            <div>M/s. : ICICI BANK LTD. - MAHARASHTRA</div>
-                            <div>No. of Box : 1</div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Sr No</td>
-                    <td>Description of Goods</td>
-                    <td>HSN/SAC</td>
-                    <td>GST Rate</td>
-                    <td>Qty</td>
-                </tr>
-                @for (item of items; track $index) {
-                <tr>
-                    <td><span style="width: 15px;">{{ $index + 1 }}</span></td>
-                    <td>{{ item.product }}</td>
-                    <td>{{ item.hsn }}</td>
-                    <td>{{ item.gstRate + ' %'}}</td>
+                    <td>{{ item.gst + ' %'}}</td>
                     <td>{{ item.qty + ' Nos' }}</td>
                 </tr>
                 }
@@ -260,19 +157,18 @@
                 <tr>
                     <td colspan="5" style="text-align: left;">
                         PLACE OF DELIVERY ADDRESS <br>
-                        Contact Person : Manisha Poojary <br>
-                        Contact Nos. : 8879167378 <br>
-                        ICICI BANK LTD. - MAHARASHTRA <br>
-                        2779-KALAMBOLI,SECTOR 9E, KALAMBOLI, NAVI MUMBA,,SHOP NO 6 <br>
-                        & 7, PARTH SOLITIRE,KALAMBOLI-410218 <br>
-                        {{'Email : manisha.poojary@icicibank.com Cost Center : 2779'}} <br>
-                        GST No. : 27AAACI1195H1ZM State : Maharashtra, Code : 27 <br>
+                        Contact Person : {{ clientDetail.empName }} <br>
+                        Contact Nos. : {{ clientDetail.empContactNo }} <br>
+                        {{ clientDetail.empAddress }} <br>
+                        Email : {{ clientDetail.empEmail }}, &nbsp; GST No. : {{ clientDetail.empGstNo }} <br>
                     </td>
                 </tr>
             </table>
         </div>
+        }
     </div>
 </div>
+
 
 
 <button (click)="print()">Print</button>
