--- a/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
+++ b/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.html
@@ -54,7 +54,6 @@
         <div class="btns">
             <!-- <button class="edit">Edit</button> -->
             <button class="print" (click)="print()">Print</button>
-            <button class="icon" mat-icon-button><mat-icon>print</mat-icon></button>
             <button class="export">Export</button>
         </div>
     </div>
@@ -75,15 +74,27 @@
             <tbody>
                 @for (item of items; track $index) {
                 <tr>
-                    <td><input type="checkbox" [checked]="item.checked" (click)="check($index)"></td>
+                    <td>
+                        @if(item.status !== 'Dispatch'){
+                        <input type="checkbox" [checked]="item.checked" (click)="check($index)">
+                        }
+                        @else {
+                            <span style="padding: 15px 0;"></span>
+                        }
+                    </td>
                     <td>{{ item.orderDetailId }}</td>
                     <td>{{ item.itemName }}</td>
                     <td>{{ item.qty }}</td>
                     <td>
+                        @if(item.status !== 'Dispatch'){
                         <select>
                             <option value=""></option>
                             <option [selected]="item.dispatch === 'Dispatch'" value="Dispatch">Dispatch</option>
                         </select>
+                        }
+                        @else {
+                        Dispatched
+                        }
                     </td>
                     <td>{{ item.remark }}</td>
                     <td>{{ item.address }}</td>
